--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -29,25 +29,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Inputs:\n",
-    "q_0 = np.array([0,2])\n",
-    "p_0 = np.array([1,4])\n",
-    "u_0 = np.array([2])\n",
+    "q_0 = np.array([0])\n",
+    "p_0 = np.array([0])\n",
+    "u_0 = np.array([0])\n",
     "qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "\n",
     "t_0 = 0\n",
-    "T =  4\n",
-    "K=2\n",
+    "T =  2\n",
+    "K=1\n",
     "\n",
     "integrateTol = 10**-3\n",
     "integrateMaxIter = 40\n",
-    "state_dim = 2\n",
+    "state_dim = 1\n",
     "Gamma = 1"
    ]
   },
@@ -61,15 +61,15 @@
    "source": [
     "def H_T_p(q,p,u):\n",
     "    # for q-dot\n",
-    "    return np.ones(np.shape(q))+q\n",
+    "    return np.ones(np.shape(q))*0\n",
     "\n",
     "def H_T_q(q,p,u):\n",
     "    # for p-dot\n",
-    "    return np.ones(np.shape(p))+p\n",
+    "    return np.ones(np.shape(p))*0\n",
     "    \n",
     "def Q_u(q,p,u):\n",
     "    # for u-dot\n",
-    "    return np.ones(np.shape(u))+u\n",
+    "    return np.ones(np.shape(u))*0\n",
     "    "
    ]
   },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -146,11 +146,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 2.95600620e+03,  8.87001860e+03, -9.99338116e-01, -9.98345290e-01,\n",
-       "       -9.99007174e-01])"
+       "array([0., 0., 0.])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -198,15 +197,15 @@
     "    vec_normalized = vec_current/float(weights_total)\n",
     "    return vec_normalized\n",
     "\n",
-    "# weights, weights_total = get_weights(K)\n",
-    "# q_bar = apply_filter(qs,weights, weights_total)\n",
-    "# p_bar = apply_filter(ps,weights, weights_total)\n",
-    "# u_bar = apply_filter(us,weights, weights_total)"
+    "weights, weights_total = get_weights(K)\n",
+    "q_bar = apply_filter(qs,weights, weights_total)\n",
+    "p_bar = apply_filter(ps,weights, weights_total)\n",
+    "u_bar = apply_filter(us,weights, weights_total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -215,12 +214,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 8.37776114 27.13328343]\n",
-      "[-0.65641185 -0.14102963]\n",
-      "[-0.48461778]\n",
-      "[array([1.71656809, 7.14970426]), array([ 6.37867051, 21.13601153]), array([19.03713547, 59.1114064 ])]\n",
-      "[array([-0.26496265,  0.83759338]), array([-0.72993435, -0.32483587]), array([-0.90081606, -0.75204015])]\n",
-      "[array([0.10255603]), array([-0.59490152]), array([-0.85122409])]\n"
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[array([0.])]\n",
+      "[array([0.])]\n",
+      "[array([0.])]\n"
      ]
     }
    ],
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -290,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
