--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -223,12 +223,12 @@
     "        '''\n",
     "#         self.state_agent_mapping={}\n",
     "        '''       \n",
-    "        q_p_u_values is a dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs: local values for q, p, and u for this agent.  \n",
+    "        q_p_u_dict is a dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs: local values for q, p, and u for this agent.  \n",
     "                        blackboard holds all of the most recent local values, e.g.\n",
     "                        {'q': {'1':3, '2':0}, 'p': {'1':3, '2': 2}, 'u': {'1': 0}}\n",
     "                        It doesn't care which agent updated them most recently.  It only needs to know which values to update.\n",
     "        '''\n",
-    "        self.q_p_u_values={}\n",
+    "        self.q_p_u_dict={}\n",
     "    \n",
     "    def construct_p_q(self, agent):\n",
     "        '''\n",
@@ -240,10 +240,10 @@
     "            u_vec (np.array): vector of u values\n",
     "        '''\n",
     "        # find which states pertain to this agent\n",
-    "        # for the states that don't, get the values from q_p_u_values and put them into qp_vec \n",
+    "        # for the states that don't, get the values from q_p_u_dict and put them into qp_vec \n",
     "        \n",
     "        qp_vec = agent\n",
-    "        # read all other values for other states from agent_q_p_u_values\n",
+    "        # read all other values for other states from agent_q_p_u_dict\n",
     "        return qp_vec, u_vec\n",
     "    \n",
     "    def update_agent(self, agent):\n",
@@ -252,15 +252,15 @@
     "            agent (instance of class Agent): this is the agent whos values we are updating\n",
     "        Outputs:\n",
     "            No outputs.  This method just updates the attributes of the blackboard,\n",
-    "            just update the dictionary, agent_q_p_u_values.\n",
+    "            just update the dictionary, agent_q_p_u_dict.\n",
     "        '''\n",
     "        # determine which states pertain to this agent and replace the old values with new\n",
     "        for state_ix in agent.state_indices:\n",
-    "            self.q_p_u_values[agent]['q'][str(state_ix)] = agent.qp_dict['q'][str(state_ix)]\n",
-    "            self.q_p_u_values[agent]['p'][str(state_ix)] = agent.qp_dict['p'][str(state_ix)]\n",
+    "            self.q_p_u_dict[agent]['q'][str(state_ix)] = agent.qp_dict['q'][str(state_ix)]\n",
+    "            self.q_p_u_dict[agent]['p'][str(state_ix)] = agent.qp_dict['p'][str(state_ix)]\n",
     "            \n",
     "        for control_ix in agent.control_indices:\n",
-    "            self.q_p_u_values[agent]['u'][str(control_ix)] = agent.u_dict['u'][str(control_ix)]\n",
+    "            self.q_p_u_dict[agent]['u'][str(control_ix)] = agent.u_dict['u'][str(control_ix)]\n",
     "        \n",
     "    # Look at what things the Blackboard needs\n",
     "    # It at least needs a mapping that tells which states pertain to which agent\n",
