--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -277,52 +277,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "myAgent=Agent(state_indices=[1,2], control_indices=[1,3])\n",
+    "myAgent=Agent(state_indices=[1,2], control_indices=[1,2])\n",
     "myAgent.q_p_u_dict={}\n",
     "myAgent.q_p_u_dict['q']={}\n",
-    "myAgent.q_p_u_dict['q']['1']=[0]\n",
-    "myAgent.q_p_u_dict['q']['2']=[0]\n",
+    "myAgent.q_p_u_dict['q']['1']=0\n",
+    "myAgent.q_p_u_dict['q']['2']=1\n",
     "\n",
     "myAgent.q_p_u_dict['p']={}\n",
-    "myAgent.q_p_u_dict['p']['1']=[0]\n",
-    "myAgent.q_p_u_dict['p']['2']=[0]\n",
+    "myAgent.q_p_u_dict['p']['1']=0\n",
+    "myAgent.q_p_u_dict['p']['2']=1\n",
     "\n",
     "\n",
     "myAgent.q_p_u_dict['u']={}\n",
-    "myAgent.q_p_u_dict['u']['1']=[0]\n",
-    "myAgent.q_p_u_dict['u']['2']=[0]\n",
+    "myAgent.q_p_u_dict['u']['1']=0\n",
+    "myAgent.q_p_u_dict['u']['2']=1\n",
     "\n",
     "bb=Blackboard()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "bb.update_q_p_u_dict(myAgent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'3'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-163bb6be3765>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_q_p_u_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-35-b4a5f1643956>\u001b[0m in \u001b[0;36mupdate_q_p_u_dict\u001b[0;34m(self, agent)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcontrol_ix\u001b[0m \u001b[0;32min\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrol_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'u'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontrol_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'u'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontrol_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;31m# Look at what things the Blackboard needs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: '3'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bb.update_q_p_u_dict(myAgent)"
+    "bb.q_p_u_dict"
    ]
   },
   {
