--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -194,18 +194,18 @@
     "    def H_MF_nou(self, q_s, p_mf):\n",
     "        return 1\n",
     "\n",
-    "    def H_MF_u(self, q_s, p_mf, u_s):\n",
-    "        # q_s, p_mf, u_s are vectors for ALL of the states, costates, and controls\n",
-    "        # \n",
+    "    def H_MF_u(self, q_mf, p_mf, u_mf):\n",
+    "        # q_s, u_mf are vectors for ALL of the states, and controls\n",
+    "        # p_mf is a vector for ONLY the local states/costates\n",
     "        # length of u_s must match number of terms here\n",
-    "        # some of the elements in u_s are quenched \n",
-    "        return self.H_MF_u_1(q_s, p_mf, u_s)*u_s[0] + self.H_MF_u_2(q_s, p_mf, u_s)*u_s[1]\n",
+    "        # some of the elements in u_s are quenched\n",
+    "        return self.H_MF_u_1(q_s, p_mf, u_s)*u_mf[0] + self.H_MF_u_2(q_s, p_mf, u_mf)*u_mf[1]\n",
     "\n",
-    "    def H_MF_u_1(self, q_s, p_mf, u_s):\n",
-    "        return 1\n",
+    "    def H_MF_u_1(self, q_mf, p_mf):\n",
+    "        return q_mf[0]*q_mf[1]\n",
     "    \n",
-    "    def H_MF_u_2(self, q_s, p_mf, u_s):\n",
-    "        return 2\n",
+    "    def H_MF_u_2(self, q_mf, p_mf):\n",
+    "        return q_mf[1]\n",
     "        \n",
     "    def qp_rhs_H_mf(self, q_s, p_mf, u_s):\n",
     "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
@@ -372,10 +372,10 @@
     "        return -1*self.Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
     "    ## Mean Field methods\n",
-    "    def H_MF_nou(self, q_s, p_mf):\n",
+    "    def H_MF_nou(self, q_mf, p_mf, u_mf):\n",
     "        return 1\n",
     "\n",
-    "    def H_MF_u(self, q_s, p_mf, u_s):\n",
+    "    def H_MF_u(self, q_mf, p_mf, u_mf):\n",
     "        return 1\n",
     "        \n",
     "    def qp_rhs_H_mf(self, q_s, p_mf, u_s):\n",
@@ -459,7 +459,6 @@
     "\n",
     "            get quenched values from blackboard\n",
     "            '''\n",
-    "            \n",
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
     "            sliding_window(agent)\n",
     "\n",
@@ -479,21 +478,14 @@
     "            \n",
     "        return L_mf_total_q_dot\n",
     "\n",
-    "# *** mixing_rate will be given as input ***\n",
-    "#     def mixing_rate(self, q_l, q_l_dot, u_s, agent_index):\n",
-    "#         agent = filter(lambda: agent.index == agent.index, self.agents)[0]\n",
-    "#         L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
-    "#         L_mf_total_q_dot = self.L_mf_total_q_dot(q_l, q_l_dot, u_s)\n",
-    "#         return L_l_q_dot/L_mf_total_q_dot\n",
     "    \n",
-    "    def H_mf(self, q_s, p_mf, u_s, agent_index):\n",
-    "        # start with H_mf = H_mf_no_u, and then add H_mf_u\n",
-    "        H_mf = agent.H_mf_no_u(q_s, p_mf, u_s, agent_index)\n",
-    "        for agent in self.agents:\n",
-    "            # evaluate H_mf_u for each of the agents\n",
-    "            H_mf_u = agent.H_mf_u(q_s, p_mf)*u_s\n",
-    "            H_mf = H_mf + H_mf_u\n",
-    "         \n",
+    "    def H_mf(self, q_mf, p_mf, u_mf, agent_index):\n",
+    "        # start with H_mf = H_mf_nou, and then add the H_mf_u's\n",
+    "        agent_index\n",
+    "        H_mf = agent.H_mf_nou(q_mf, p_mf, u_mf)\n",
+    "        H_mf_u = agent.H_mf_u(q_mf, p_mf, u_mf)\n",
+    "        H_mf = H_mf + H_mf_u\n",
+    "        \n",
     "        return H_mf\n",
     "    "
    ]
